# acordeon-midi-app-android

./: ARCHITECTURE.md  CHANGELOG.md  DECISOES.md  README.md  ROADMAP.md
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  MidiManager.cpp  SynthManager.cpp  SynthManager.h
app/src/main/java/com/robsonmartins/androidmidisynth/: BleScannerManager.kt  ComponentesMidi.kt  MainActivity.kt  MidiEstadoCompartilhado.kt  MidiManager.kt  OtaManager.kt  SynthManager.kt  TelaMidi.kt
app/src/main/java/com/robsonmartins/androidmidisynth/model/: MidiChannel.kt
app/src/main/java/com/robsonmartins/androidmidisynth/ui/components/: ChannelCard.kt
app/src/main/java/com/robsonmartins/androidmidisynth/ui/home/: HomeScreen.kt
app/src/main/java/com/robsonsmartins/androidmidisynth/: ComponentesMidi.kt  MainActivity.kt  MidiEstadoCompartilhado.kt  MidiManager.kt  OtaManager.kt  SynthManager.kt  TelaMidi.kt
app/src/main/res/values/: strings.xml  themes.xml
gradle/wrapper/: gradle-wrapper.properties
